k8s/help-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: help-service
  labels:
    app: help-service
spec:
  selector:
    app: help-service
  ports:
  - port: 3002
    targetPort: 3000
  type: ClusterIP
