k8s/help-service-direct-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: help-service-direct-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: help-service.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: help-service
            port:
              number: 3002
